--- a/docker/docker-compose-build.yml
+++ b/docker/docker-compose-build.yml
@@ -10,7 +10,10 @@ services:
       - "127.0.0.1:${WEBSERVER_PORT:-8080}:${WEBSERVER_PORT:-8080}"
 
     volumes:
-      - ../config:/app/config:ro
+      - ../config/config.yaml:/app/config/config.yaml:ro
+      - ../config/frequency_words.txt:/app/config/frequency_words.txt:ro
+      - ../config/ai_analysis_prompt.txt:/app/config/ai_analysis_prompt.txt:ro
+      - ../config/ai_translation_prompt.txt:/app/config/ai_translation_prompt.txt:ro
       - ../output:/app/output
 
     environment:
@@ -69,7 +72,10 @@ services:
       - "127.0.0.1:3333:3333"
 
     volumes:
-      - ../config:/app/config:ro
+      - ../config/config.yaml:/app/config/config.yaml:ro
+      - ../config/frequency_words.txt:/app/config/frequency_words.txt:ro
+      - ../config/ai_analysis_prompt.txt:/app/config/ai_analysis_prompt.txt:ro
+      - ../config/ai_translation_prompt.txt:/app/config/ai_translation_prompt.txt:ro
       - ../output:/app/output
 
     environment:
